--- a/source/_themes/ods-theme/static/css/theme.css
+++ b/source/_themes/ods-theme/static/css/theme.css
@@ -5361,7 +5361,7 @@ body, h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, p, a {
 }
 .wy-menu-vertical header, .wy-menu-vertical p.caption {
   padding: 0 1.7rem;
-  margin: 2.55rem 0 0.85rem 0;
+  margin: 39px 0 26px 0;
   text-transform: uppercase;
   color: #898D92;
   white-space: nowrap;
@@ -5398,6 +5398,9 @@ body, h1, h2, .rst-content .toctree-wrapper p.caption, h3, h4, h5, h6, p, a {
 }
 .wy-menu-vertical li a:hover span.toctree-expand {
   color: #0086D6 !important;
+}
+.wy-menu-vertical li.toctree-l1 {
+  margin-top: 26px;
 }
 .wy-menu-vertical li.toctree-l1 a {
   margin-left: 1.7rem;
